# subgame-network

./: .gitignore  Dockerfile  README.md  docker-compose.mainnet.yml  docker-compose.staging.yml  docker-compose.validator.yml  docker-compose.yml  docker_run.md  game_center.md  main.json
.cargo-husky/hooks/: pre-commit
common/: Cargo.toml
dev模式（node : runtime）/node/: Cargo.toml
dev模式（node : runtime）/node/src/: chain_spec.rs  rpc.rs
dev模式（node : runtime）/runtime/: Cargo.toml
dev模式（node : runtime）/runtime/src/: lib.rs
ev/chains/subgame/db/: 000032.sst  000034.sst  000035.sst  000036.sst  000037.sst  000038.sst  000039.sst  000040.sst  IDENTITY  LOG  MANIFEST-000047  OPTIONS-000050
ev/chains/subgame/network/: secret_ed25519
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  rpc.rs  service.rs
pallets/: README.md
pallets/assets/: Cargo.toml
pallets/assets/src/: lib.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: benchmarking.rs  default_weight.rs  lib.rs
pallets/card-factory/: Cargo.toml
pallets/card-factory/src/: card_factory.rs  default_weight.rs  lib.rs
pallets/chips/: Cargo.toml  READMD.md  README.md
pallets/chips/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
pallets/demogame/: Cargo.toml  README.md
pallets/demogame/src/: lib.rs  mock.rs  tests.rs
pallets/game-recharge/: Cargo.toml
pallets/game-recharge-pro/: Cargo.toml
pallets/game-recharge-pro/src/: lib.rs
pallets/game-recharge/src/: default_weight.rs  lib.rs
pallets/gamecenter/: Cargo.toml  READMD.md  README.md
pallets/gamecenter/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
pallets/gametemplates/: Cargo.toml  READMD.md  README.md
pallets/gametemplates-guess-hash/: Cargo.toml  READMD.md  README.md
pallets/gametemplates-guess-hash/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
pallets/gametemplates/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
pallets/lease/: Cargo.toml  README.md
pallets/lease/src/: lease.rs  lib.rs  mock.rs  tests.rs
pallets/manage-card-info/: Cargo.toml
pallets/manage-card-info/src/: default_weight.rs  lib.rs  manage_card_info.rs
pallets/nft/: Cargo.toml  README.md
pallets/nft-exchange/: Cargo.toml
pallets/nft-exchange/src/: default_weight.rs  lib.rs  nft_exchange.rs
pallets/nft/src/: lib.rs  mock.rs  nft.rs  tests.rs
pallets/seventh-planet/: Cargo.toml
pallets/seventh-planet/src/: default_weight.rs  lib.rs
pallets/sonic-racer/: Cargo.toml
pallets/sonic-racer/src/: default_weight.rs  lib.rs
pallets/stake/: Cargo.toml  README.md
pallets/stake-nft/: Cargo.toml  README.md
pallets/stake-nft/src/: lib.rs  mock.rs  stake_nft.rs  tests.rs
pallets/stake/src/: benchmarking.rs  default_weight.rs  lib.rs  mock.rs  tests.rs
pallets/subgame-assets/: Cargo.toml
pallets/subgame-assets/src/: benchmarking.rs  lib.rs
pallets/swap/: Cargo.toml
pallets/swap/src/: benchmarking.rs  default_weight.rs  lib.rs  mock.rs  tests.rs
pallets/swaps/: Cargo.toml
pallets/swaps/fungible/: Cargo.toml
pallets/swaps/fungible/src/: lib.rs
pallets/swaps/src/: lib.rs
pallets/tspwhitelist/: Cargo.toml
pallets/tspwhitelist/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: docker_run.sh
