[package]
authors = ['SubGame']
build = 'build.rs'
description = 'SubGame Network fork from Substrate'
edition = '2018'
homepage = 'https://www.subgame.org/'
license = 'Apache-2.0 License'
name = 'subgame'
repository = 'https://github.com/SubGame-Network/subgame-network'
version = '3.0.0'

[[bin]]
name = 'subgame'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
pallet-contracts  = '3.0.0'
pallet-contracts-rpc  = '3.0.0'
hex-literal = "0.3.1"
hex = "0.3.1"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"

# local dependencies
subgame-runtime = { path = '../runtime', version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = '0.9.0'
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-babe = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-babe = '0.9.0'
sp-authority-discovery = '3.0.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'

pallet-im-online = '3.0.0'
pallet-staking = '3.0.0'

sc-consensus-manual-seal = '0.9.0'
futures = '0.3.4'
pallet-ethereum = '1.0.0'
pallet-evm = '3.0.0'
sp-consensus-aura = '0.9.0'
fc-rpc = '1.0.0'
fp-rpc = '1.0.0'
fc-rpc-core = '1.0.0'
fc-db = '1.0.0'
fc-mapping-sync = '1.0.0'
fc-consensus = '1.0.0'
jsonrpc-pubsub = '15.0.0'
sc-network = '0.9.0'
sc-telemetry = '3.0.0'
sc-consensus-aura = '0.9.0'

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[features]
default = []
runtime-benchmarks = ['subgame-runtime/runtime-benchmarks']
