[package]
authors = ['SubGame']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'subgame-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-subgame/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }
static_assertions = "1.1.0"
pallet-scheduler = { default-features = false, version = '3.0.0' }

# local dependencies
pallet-gametemplates = { path = '../pallets/gametemplates', default-features = false, version = '3.0.0' }
pallet-gamecenter = { path = '../pallets/gamecenter', default-features = false, version = '3.0.0' }
pallet-gametemplates-guess-hash = { path = '../pallets/gametemplates-guess-hash', default-features = false, version = '3.0.0' }
pallet-chips = { path = '../pallets/chips', default-features = false, version = '3.0.0' }
pallet-bridge = { path = '../pallets/bridge', default-features = false, version = '3.0.0' }
pallet-stake = { path = '../pallets/stake', default-features = false, version = '3.0.0' }
pallet-subgame-assets = { path = '../pallets/subgame-assets', default-features = false, version = '3.0.0'  }
pallet-nft = { path = '../pallets/nft', default-features = false, version = '3.0.0'  }
pallet-stake-nft = { path = '../pallets/stake-nft', default-features = false, version = '3.0.0'  }
pallet-lease = { path = '../pallets/lease', default-features = false, version = '3.0.0'  }
pallet-demogame = { path = '../pallets/demogame', default-features = false, version = '3.0.0'  }
pallet-swap = { path = '../pallets/swap', default-features = false, version = '3.0.0'  }
pallet-manage-card-info = { path = '../pallets/manage-card-info', default-features = false, version = '3.0.0'  }
pallet-card-factory = { path = '../pallets/card-factory', default-features = false, version = '3.0.0'  }
pallet-seventh-planet = { path = '../pallets/seventh-planet', default-features = false, version = '3.0.0'  }
pallet-nft-exchange = { path = '../pallets/nft-exchange', default-features = false, version = '3.0.0'  }
pallet-game-recharge = { path = '../pallets/game-recharge', default-features = false, version = '3.0.0'  }
pallet-tspwhitelist = { path = '../pallets/tspwhitelist', default-features = false, version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
# Staking dependencies
pallet-babe = { default-features = false, version = '3.0.0' }
pallet-democracy = { version = "3.0.0", default-features =false }
pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
pallet-staking = { version = "3.0.0", default-features = false }
pallet-staking-reward-curve = { version = "3.0.0", default-features = false }
pallet-authorship = { version = "3.0.0", default-features = false }
pallet-im-online = {default-features = false, version = '3.0.0'}
pallet-offences = {default-features = false, version = '3.0.0'}
pallet-authority-discovery = {default-features = false, version = '3.0.0'}
pallet-collective = { version = "3.0.0", default-features = false }
pallet-membership = { version = "3.0.0", default-features = false }
pallet-elections-phragmen = { version = "3.0.0", default-features = false }
pallet-indices = { version = "3.0.0", default-features = false }
pallet-proxy = { version = "3.0.0", default-features = false }
pallet-multisig = { version = "3.0.0", default-features = false }
pallet-recovery = { version = "3.0.0", default-features = false }
pallet-treasury = { version = "3.0.0", default-features = false }
pallet-bounties = { version = "3.0.0", default-features = false }
pallet-tips = { version = "3.0.0", default-features = false }
pallet-utility = { version = "3.0.0", default-features = false }

pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-babe = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-staking = { version = "3.0.0", default-features = false }
sp-authority-discovery = {default-features = false, version = '3.0.0'}
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
pallet-contracts = { default-features = false, version = '3.0.0' }
pallet-contracts-primitives = { default-features = false, version = '3.0.0' }
pallet-contracts-rpc-runtime-api = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    "pallet-collective/std",
	"pallet-membership/std",
	"pallet-elections-phragmen/std",
	"pallet-indices/std",
	"pallet-proxy/std",
	"pallet-multisig/std",
	"pallet-recovery/std",
    "pallet-session/std",
	"pallet-staking/std",
    "pallet-democracy/std",
    'pallet-authorship/std',
    'pallet-im-online/std',
    'pallet-offences/std',
    'pallet-authority-discovery/std',
    "pallet-treasury/std",
	"pallet-bounties/std",
	"pallet-tips/std",
	"pallet-utility/std",
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    "sp-staking/std",
    "sp-authority-discovery/std",
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-contracts/std',
    'pallet-contracts-primitives/std',
    'pallet-contracts-rpc-runtime-api/std',
    'pallet-scheduler/std',

	'pallet-nft/std',
	'pallet-subgame-assets/std',
    'pallet-stake-nft/std',
    'pallet-lease/std',
    'pallet-demogame/std',
    'pallet-swap/std',
    'pallet-nft-exchange/std',
    'pallet-manage-card-info/std',
    'pallet-card-factory/std',
    'pallet-seventh-planet/std',
    'pallet-nft-exchange/std',
    'pallet-game-recharge/std',
]
