[package]
authors = ['SubGame']
description = 'Responsible for managing the user’s chips, after purchasing chips, you can use the chips to participate in the game'
edition = '2018'
homepage = 'https://www.subgame.org'
license = 'Apache-2.0 License'
name = 'pallet-bridge'
repository = 'https://github.com/SubGame-Network/subgame-network'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
sp-std = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
balances = { package = 'pallet-balances', version = '3.0.0', default-features = false }
pallet-subgame-assets = { path = '../subgame-assets', default-features = false, version = '3.0.0' }


[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'sp-std/std',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'balances/std',

	'pallet-subgame-assets/std',
]
