[package]
authors = ['SubGame']
description = 'This module is a special pallet, and you need to use `stake-nft` to obtain access rights (this is a simulated pallet)'
edition = '2018'
homepage = 'https://www.subgame.org'
license = 'Apache-2.0 License'
name = 'pallet-demogame'
repository = 'https://github.com/SubGame-Network/subgame-network'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.hex-literal]
version = '0.3.1'

[dependencies]
pallet-timestamp = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
pallet-lease = { version = "3.0.0", default-features = false, path = "../lease" }
pallet-nft = { version = "3.0.0", default-features = false, path = "../nft" }
pallet-stake-nft = { version = "3.0.0", default-features = false, path = "../stake-nft" }



[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

# use unit test
balances = { package = 'pallet-balances', version = '3.0.0', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-runtime/std",
    'sp-std/std',
    'pallet-lease/std',
    'pallet-stake-nft/std',
    'pallet-nft/std',
    'pallet-timestamp/std'
]
