[package]
authors = ['SubGame']
description = 'Management of Game Template instances, can create game and bet, query the specified template,  current betting games and historical games'
edition = '2018'
homepage = 'https://www.subgame.org'
license = 'Apache-2.0 License'
name = 'pallet-gamecenter'
repository = 'https://github.com/SubGame-Network/subgame-network'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.hex-literal]
version = '0.3.1'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
pallet-gametemplates-guess-hash = { version = "3.0.0", default-features = false, path = "../gametemplates-guess-hash" }
pallet-chips = { version = "3.0.0", default-features = false, path = "../chips" }



[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

# use unit test
balances = { package = 'pallet-balances', version = '3.0.0', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-runtime/std",
    'sp-std/std',
    'pallet-gametemplates-guess-hash/std',
    'pallet-chips/std',
]
