[package]
description = 'A list of leasable modules is defined in pallet-lease, and users can obtain module usage rights by staking nft tokens.'
edition = '2018'
homepage = 'https://www.subgame.org'
license = 'Apache-2.0 License'
name = 'pallet-lease'
repository = 'https://github.com/SubGame-Network/subgame-network'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.116", optional = true }

# Substrate dependencies
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }

# time
chrono = { version = "0.4", default-features = false }

pallet-nft = { path = '../nft', default-features = false, version = '3.0.0' }

# use unit test
balances = { package = 'pallet-balances', version = '3.0.0', default-features = false }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'pallet-nft/std',
    'chrono/std',
    
    # use unit test
    'balances/std',
]
