[package]
name = "pallet-seventh-planet"
version = "3.0.0"
authors = ["SubGame"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://www.subgame.org"
repository = "https://github.com/SubGame-Network/"
description = "SubGame manage card info pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "3.0.0", default-features = false }
# Needed for type-safe access to storage DB.
frame-support = { version = "3.0.0", default-features = false }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "3.0.0", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
rand = { version = "0.8.4", default-features = false}
pallet-lease = { version = "3.0.0", default-features = false, path = "../lease" }
pallet-nft = { version = "3.0.0", default-features = false, path = "../nft" }

[dev-dependencies]
sp-core = { version = "3.0.0" }
sp-std = { version = "3.0.0" }
sp-io = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"rand/std",
	"pallet-lease/std",
	"pallet-nft/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
