[package]
name = "pallet-fungible"
authors = ['SubGame']
description = 'Responsible for managing the user’s chips, after purchasing chips, you can use the chips to participate in the game'
edition = '2018'
homepage = 'https://www.subgame.org'
license = 'Apache-2.0 License'
repository = 'https://github.com/SubGame-Network/subgame-network'
version = '3.0.0'

[dependencies]
sp-std = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }

[dependencies.pallet-balances]
default-features = false
package = 'pallet-balances'
version = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dev-dependencies.sp-core]
default-features = false
version = '3.0.0'

[dev-dependencies.sp-io]
default-features = false
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std'
]
